--- a/build.xml
+++ b/build.xml
@@ -5,13 +5,9 @@
   <property name="ivy.jar.file"        value="${ivy.jar.dir}/ivy.jar" />
 
   <path id="classpath">
-    <fileset dir="/home/r_omio/hadoop/lib/">
+    <fileset dir="lib/">
       <include name="**/*.jar"/>
     </fileset>
-    <fileset dir="/home/r_omio/hadoop/">
-      <include name="*.jar"/>
-    </fileset>
-    <pathelement path="build/main" />
     <pathelement path="build/testharness" />
 <!--    <pathelement path="build/test" /> -->
 
@@ -59,14 +55,7 @@
 
   <target name="init" depends="install-ivy">
     <mkdir dir="build" />
-    <mkdir dir="build/main" />
     <mkdir dir="build/testharness" />
-<!--    <mkdir dir="build/test" /> 
-    <mkdir dir="build/examples" />
-    <mkdir dir="build/examples/Wordcount" />
-    <mkdir dir="build/examples/SNMP"/>
-    <mkdir dir="build/examples/Treasury"/>
-    <mkdir dir="build/examples/WordCountSplitTest"/>    -->
   </target>
 
   <target name="resolve" depends="init" description="--> retrieve dependencies with ivy">
@@ -78,21 +67,14 @@
     <delete file="mongo-hadoop.jar"/>
   </target>
 
-  <target name="compile" depends="init" description="--> compile all artifacts">
+  <target name="checklib">
+           <available property="lib.exists" file="lib"/>
+   </target>
+  <target name="firstresolve" unless="${lib.exists}" >
+          <antcall target="resolve" /> 
+  </target>
 
-    <javac srcdir="src/main"
-           destdir="build/main"
-           optimize="off"
-           deprecation="off"
-           source="1.5"
-           target="1.5"
-           encoding="ISO-8859-1"
-           memoryMaximumSize="256M"
-           fork="true"
-           debug="on" >
-      <classpath refid="classpath"/>
-    </javac>
-
+  <target name="compile" depends="init,checklib,firstresolve" description="--> compile all artifacts">
 
     <javac srcdir="src/testharness/"
            destdir="build/testharness"
@@ -111,10 +93,8 @@
 
 
   <target name="jar" depends="compile">
-    <jar destfile="mongo-hadoop.jar">
-      <fileset dir="build/main"
-         includes="**/*.class" />
-      <fileset dir="build/examples"
+    <jar destfile="mongo-hadoop-test-harness.jar">
+      <fileset dir="build/testharness"
          includes="**/*.class" />
    </jar>
   </target>
